// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyField Component should handle copy click 1`] = `
<Tooltip
  bottom={true}
  content="Copied to clipboard!"
  dark={true}
  disabled={false}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Button
    onClick={[Function]}
    size="default"
  >
    <Icon
      name="Copy"
      size={14}
    />
     Copy
  </Button>
</Tooltip>
`;

exports[`CopyField Component should pass rest of attrs to TextField 1`] = `
<TextField
  connectRight={
    <Tooltip
      bottom={true}
      content="Copied to clipboard!"
      dark={true}
      disabled={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      <Button
        onClick={[Function]}
        size="default"
      >
        <Icon
          name="Copy"
          size={14}
        />
         Copy
      </Button>
    </Tooltip>
  }
  multiline={true}
  onFocus={[Function]}
  readOnly={true}
  required={true}
  resize="both"
  type="text"
/>
`;

exports[`CopyField Component should render - no props 1`] = `
<TextField
  connectRight={
    <Tooltip
      bottom={true}
      content="Copied to clipboard!"
      dark={true}
      disabled={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      <Button
        onClick={[Function]}
        size="default"
      >
        <Icon
          name="Copy"
          size={14}
        />
         Copy
      </Button>
    </Tooltip>
  }
  onFocus={[Function]}
  readOnly={true}
  required={false}
  resize="both"
  type="text"
/>
`;
